--- a/index.html
+++ b/index.html
@@ -658,7 +658,8 @@
              website* <br><input type="text" class="input3"><br>
              <input type="checkbox"class="posts_comment">
              <p class="p2">Save my name, email, and website in this browser for the next time I <br> comment</p>
-             <input type="submit"class="post_comment">
+<!--              <input type="submit"class="post_comment"> -->
+             <button class="submit">post comment</button>
         </div>
 
                        <!-- footer bar -->
